Fixed Form Input styling...
Added nesting routes for shop pages

--- a/src/components/FormInput/FormInput.scss
+++ b/src/components/FormInput/FormInput.scss
@@ -23,6 +23,7 @@ $main-color: black;
 		border-radius: 0;
 		border-bottom: 1px solid $sub-color;
 		margin: 25px 0;
+		background-color: #fffcf2;
 
 		&:focus {
 			outline: none;
