--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
-	font-family: 'Open Sans Condensed';
+	font-family: 'Open Sans', sans-serif;
 	padding: 20px 60px;
+	background-color: #fffcf2;
 }
 
 a {
